# dsftp

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
cli/: index.js  index.ts  tui.js  tui.ts
core/: config.js  config.ts  docker.js  docker.ts  index.js  index.ts  types.ts
docs/: API.md  MAC_NETWORK_DEBUG.md  MENU.md  UI-SPEC.md
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gui/src/: App.jsx  App.tsx  index.css  types.ts
gui/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: CreateServerModal.jsx  CreateServerModal.tsx  ServerDetail.jsx  ServerDetail.tsx  ServerList.jsx  ServerList.tsx  Sidebar.jsx  Sidebar.tsx  StatusBar.jsx  StatusBar.tsx
scripts/: convert-to-ico.js  create-icon.js  create-portable.js
